--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
                     <h4 class="parametro-senha__titulo">Número de caracteres</h4>
                     <div class="parametro-senha-botoes">
                         <button class="parametro-senha__botao"> - </button>
-                        <p class="parametro-senha__texto" > 12 </p>
+                        <p class="parametro-senha__texto"> 12 </p>
                         <button class="parametro-senha__botao"> + </button>
                     </div>
-                </div>                
+                </div>
                 <div class="parametro-senha">
                     <h4 class="parametro-senha__titulo">Características da senha</h4>
 
@@ -37,10 +37,29 @@
                         <input name="maiusculo" type="checkbox" class="checkbox">
                         <label for="maiusculo">Letras maiúsculas</label>
                     </div>
+                    <div class="parametro-senha-checkbox">
+                        <input name="minúsculo" type="checkbox" class="checkbox">
+                        <label for="minúsculo">Letras minúsculas</label>
+                    </div>
+                    <div class="parametro-senha-checkbox">
+                        <input name="numero" tymaipe="checkbox" class="checkbox">
+                        <label for="numero">Números</label>
+                    </div>
+                    <div class="parametro-senha-checkbox">
+                        <input name="simbolo" type="checkbox" class="checkbox">
+                        <label for="simbolo">Simbólo</label>
+                    </div>
 
                 </div>
                 <div class="parametro-senha">
                     <h4 class="parametro-senha__titulo">Força da senha</h4>
+                    <div class="barra"></div>
+                    <div class="forca fraca"></div>
+                    <div class="parametro-senha-textos"></div>
+                    <p>Fraca</p>
+                    <p> Media</p>
+                    <p>Forte</p>
+
                 </div>
             </div>
         </div>
