--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </div>
         <div class="conteudo-senha">
             <label for="senha">Senha</label>
-            <input name="senha" type="text" id="campo-senha" readeoml>
+            <input name="senha" type="text" id="campo-senha" readonly>
         </div>
         <div class="parametro">
             <h3 class="parametro-titulo">Personalize sua senha</h3>
@@ -34,36 +34,37 @@
                     <h4 class="parametro-senha__titulo">Características da senha</h4>
 
                     <div class="parametro-senha-checkbox">
-                        <input name="maiusculo" type="checkbox" class="checkbox">
+                        <input name="maiusculo" type="checkbox" class="checkbox" checked>
                         <label for="maiusculo">Letras maiúsculas</label>
                     </div>
                     <div class="parametro-senha-checkbox">
-                        <input name="minúsculo" type="checkbox" class="checkbox">
-                        <label for="minúsculo">Letras minúsculas</label>
+                        <input name="minusculo" type="checkbox" class="checkbox">
+                        <label for="minusculo">Letras minúsculas</label>
                     </div>
                     <div class="parametro-senha-checkbox">
-                        <input name="numero" tymaipe="checkbox" class="checkbox">
+                        <input name="numero" type="checkbox" class="checkbox">
                         <label for="numero">Números</label>
                     </div>
                     <div class="parametro-senha-checkbox">
                         <input name="simbolo" type="checkbox" class="checkbox">
-                        <label for="simbolo">Simbólo</label>
+                        <label for="simbolo">Símbolos</label>
                     </div>
 
                 </div>
                 <div class="parametro-senha">
                     <h4 class="parametro-senha__titulo">Força da senha</h4>
-                    <div class="barra"></div>
-                    <div class="forca fraca"></div>
-                    <div class="parametro-senha-textos"></div>
-                    <p>Fraca</p>
-                    <p> Media</p>
-                    <p>Forte</p>
-
+                    <div class="barra"> </div>
+                    <div class="forca fraca"> </div>
+                    <div class="parametro-senha-textos">
+                        <p>Fraca</p>
+                        <p>Média</p>
+                        <p>Forte</p>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
+
     <script src="main.js"></script>
 </body>
 
